fix: correct post navigation text align

--- a/src/components/PostNavigation/post-navigation.module.scss
+++ b/src/components/PostNavigation/post-navigation.module.scss
@@ -23,9 +23,5 @@
     &:hover {
       filter: brightness(0.8);
     }
-
-    &:nth-child(2) {
-      text-align: end;
-    }
   }
 }
